--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
     "materialize": "^1.0.0",
