--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-fileupload": "^0.3.0",
     "file-saver": "^1.3.3",
     "formidable": "^1.1.1",
     "fs": "0.0.1-security",
+    "fs-extra": "4.0.2",
     "google-auth-library": "^0.11.0",
     "googleapis": "^22.2.0",
     "jade": "~1.11.0",
